gateway-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: miloskec/gateway:latest
        ports:
        - containerPort: 80
        lifecycle:
          postStart:
            exec:
              command: ["php", "artisan", "config:clear"]
        volumeMounts:
        - name: app-storage-logs
          mountPath: /var/www/html/storage/logs
        - name: app-logs
          mountPath: /var/www/html/logs
      volumes:
      - name: app-storage-logs
        persistentVolumeClaim:
          claimName: app-pslc
      - name: app-logs
        persistentVolumeClaim:
          claimName: app-plc
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: LoadBalancer
  selector:
    app: gateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
