memcached-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
      - name: memcached
        image: miloskec/gateway-memcached:latest
        ports:
        - containerPort: 11211
---
apiVersion: v1
kind: Service
metadata:
  name: memcached-service
spec:
  ports:
  - port: 11211
    targetPort: 11211
  selector:
    app: memcached
  clusterIP: None # Headless service
